editor-components/call_to_action/call_to_action24/call_to_action24.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
    position: relative;

    .background-top {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 50%;
        background: var(--composer-primary-color);
        z-index: 0;
    }

    .max-content {
        position: relative;
        z-index: 1;
        display: flex;
        justify-content: center;
        align-items: center;

        .card-container {
            width: 100%;
            display: flex;
            justify-content: center;

            .card {
                width: 100%;
                display: flex;
                flex-direction: column;
                align-items: center;
                justify-content: center;
                padding: 0;

                .card-content {
                    align-items: center;
                    width: 100%;

                    .title,
                    .subtitle,
                    .description {
                        text-align: center;
                    }

                    .subtitle {
                        width: fit-content;
                        transform: none;

                        &::before {
                            display: none;
                        }
                    }

                    .button-container {
                        display: flex;
                        flex-wrap: wrap;
                        justify-content: center;
                        gap: var(--composer-gap-sm);

                        .button {

                            .button-text,
                            .button-icon {
                                content: "";
                            }
                        }
                    }
                }

                &.has-background {
                    background-color: color-mix(in srgb, var(--composer-html-background), var(--composer-font-color-primary) 5%);
                    border-radius: var(--composer-border-radius-md);
                    padding: 80px var(--composer-gap-xl);

                    .card-content {

                        .subtitle {
                            background: transparent;
                            padding: 0;
                            color: var(--composer-font-color-primary) !important;
                        }
                    }
                }
            }
        }
    }

    @container (max-width: #{$composer-tablet-width}) {
        .max-content .card-container .card.has-background {
            padding: 80px var(--composer-gap-lg);
        }
    }

    @container (max-width: #{$composer-phone-width}) {
        .max-content .card-container .card.has-background {
            padding: var(--composer-gap-xl) var(--composer-gap-md);
        }
    }
}

